k8s/ingress.yaml
# Generated by DuploCloud kube-deploy.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: microservices-demo-main
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/managed-by: duplo-kube-deploy
  annotations:
    alb.ingress.kubernetes.io/group.name: duplo-kube-deploy
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:805863115079:certificate/dc6eb8bf-f499-4b75-b322-d8eb6f091b64
spec:
  ingressClassName: alb
  rules:
    - host: microservices-demo-gk-test.test21-apps.duplocloud.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
